# flutter-assignment-mdg

./: .gitignore
backend/: CMakeLists.txt  app  book_review.sqlite  main.cpp
flutter_app/: pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/lib/: main.dart
flutter_app/lib/bloc/: books_bloc.dart  review_bloc.dart  reviews_bloc.dart
flutter_app/lib/models/: book_model.dart  review_model.dart
flutter_app/lib/screens/: book_page.dart  books_page.dart  landing_page.dart
flutter_app/lib/screens/auth/: auth_cubit.dart  login_page.dart  signup_page.dart
flutter_app/lib/widgets/: book_widget.dart  review_widget.dart
